--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Font1';
+  src: url(//public/assets/font/SimplyCricketVF_WghtItal.woff) format('woff');
+}
+
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +42,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  font-family: 'Font1';
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  
+  
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+
+.cricket-green{
+  background-color: #60a630;
 }
